tests/snapshots/examples_fixtures/base__base_unknown_member_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/base/base_unknown_member_error.flx
== compile ==
failed (compile)
== diagnostics ==
error[E013]: Module Not Imported

Module `Base` is not imported.

  examples/base/base_unknown_member_error.flx:3:1
  |
3 | Base.not_real();
  | ^^^^^^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import Base`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.
== stdout ==
<not executed>
